# research

./: .gitignore  LICENSE  README.md  pyproject.toml  registry.json  skill  skill.cmd  skill_core_cli.py
examples/: README.md
examples/research/literature-survey/references/: source.md
examples/research/literature-survey/references/refs/: citation-verification.md  eval-review-synthesis.yaml.md  params-template.md
examples/research/paper-quality-gate/: SKILL.md
examples/research/paper-quality-gate/references/: ir.md  source.md
examples/research/paper-quality-gate/references/refs/: search-protocol.md  survey-standards.md
examples/research/research-survey/references/refs/: authority-standards.md  (+3 more)
skill-core/: SKILL.md  skill.py
skill-core/lib/: __init__.py  batch.py  batch_source.py  compat_md.py  compiler.py  diff.py  export.py  install.py  ir_parser.py  migrate.py  registry.py  scaffold.py  test_runner.py  validate.py
skill-core/references/: eval.yaml  example-compiled.md  gap-analysis.md  host-adapters.md  protocol-v2.md  template.skill.md  what-is-agent-skill.md
skill-core/schema/: ir.schema.json
skill-core/scripts/: export_examples.py  export_skill_md_only.py  scaffold_skill.py  validate_skill.py
skill-core/templates/: skill-bundle-SKILL.md
skill-forge/: README.md
skill-forge/built/research/literature-survey/: SKILL.md
skill-forge/built/research/research-survey/: SKILL.md
skill-forge/built/research/review-synthesis/: SKILL.md
skill-forge/themes/research/: THEME.md
skill-forge/themes/research/refs/: synthesis-methods.md
(+13 files in other folders)
