[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "research-skills"
version = "2.0.0"
description = "Agent Skills for credible literature survey and review synthesis"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = ["pyyaml>=6.0"]
keywords = ["agent-skills", "cursor", "research", "literature-review", "prisma"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
]

[project.urls]
Homepage = "https://github.com/azhimiao/research"
Repository = "https://github.com/azhimiao/research"

[project.scripts]
skill = "skill_core_cli:main"

[tool.setuptools]
py-modules = ["skill_core_cli"]
